# skeletons

./: README.md  default.nix  skeletons.cabal  skeletons.nix
src/: Main.hs
