
name:                skeletons
version:             0.1.0.0
synopsis:            Manage project skeletons


homepage:            https://github.com/jb55/skeletons
license:             MIT
license-file:        LICENSE
author:              William Casarin
maintainer:          bill@casarin.me


category:            Development
build-type:          Simple

cabal-version:       >=1.10

executable skeletons
  -- .hs or .lhs file containing the Main module.
  main-is:             Main.hs
  
  -- Modules included in this executable, other than Main.
  -- other-modules:       
  
  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:    
  
  -- Other library packages from which modules are imported.
  build-depends: base >=4.7 && <5
               , ansi-wl-pprint
               , transformers
               , text
               , directory
               , filepath
               , tinytemplate
  
  -- Directories containing source files.
  hs-source-dirs:      src
  
  -- Base language which the package is written in.
  default-language:    Haskell2010
  
